<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logInBG"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/spaceBetweenItems"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/subject"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editSubject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/default_subject"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/text_padding"
            android:paddingEnd="@dimen/text_padding" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/spaceBetweenItems"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/greeting"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editGreeting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/default_greeting"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/text_padding"
            android:paddingEnd="@dimen/text_padding" />

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/messageBox"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/spaceBetweenItems"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/click_to_compose"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/text_padding"
            android:paddingEnd="@dimen/text_padding"
            android:text="@string/letter_text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/spaceBetweenItems"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/signature"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editSignature"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/text_padding"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/default_signature"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/text_padding"
            android:paddingEnd="@dimen/text_padding" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="@dimen/spaceBetweenItems"
                android:layout_marginBottom="@dimen/spaceBetweenItems"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/arrow_icon" />

            <fragment
                android:id="@+id/locationFragment"
                android:name="cs402.homework.project3.LocationFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/spaceBetweenItems"
                android:layout_marginEnd="@dimen/side_margin" />

            <fragment
                android:id="@+id/uploadFragment"
                android:name="cs402.homework.project3.UploadFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginTop="@dimen/spaceBetweenItems" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>