<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Success">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logInBG"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/checkImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="@dimen/log_in_top_margin"
                    app:srcCompat="@drawable/large_check" />

                <TextView
                    android:id="@+id/replaceSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="@dimen/space_under_log_in_button"
                    android:text="@string/default_subject"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/deliveredOnText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="@dimen/space_under_log_in_button"
                    android:text="@string/delivered_on"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/replaceDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_under_log_in_button"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    tools:text="March 26, 2020" />

                <TextView
                    android:id="@+id/replaceTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_under_log_in_button"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    tools:text="at 3:30pm" />

                <TextView
                    android:id="@+id/toDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="@dimen/space_under_log_in_button"
                    android:text="@string/device"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="@dimen/spaceBetweenItems"
                android:layout_marginBottom="@dimen/spaceBetweenItems"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/restart" />

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>