<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logInBG"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaceBetweenDT"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/account"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/log_in_header_font_size" />

        <LinearLayout
            android:id="@+id/accountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/log_in_text_top_bottom_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginBottom="@dimen/log_in_text_top_bottom_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="@dimen/profilePicSize"
                    android:layout_height="@dimen/profilePicSize"
                    android:layout_marginRight="@dimen/spaceBetweenItems"
                    android:background="@drawable/border"
                    android:maxWidth="@dimen/profilePicSize"
                    android:maxHeight="@dimen/profilePicSize"
                    android:padding="3dp"
                    app:srcCompat="@drawable/default_profile_pic" />

                <fragment
                    android:id="@+id/uploadFragment_acct"
                    android:name="cs402.homework.project3.UploadFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/firstNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceBetweenItems"
                android:layout_weight="1"
                android:ems="10"
                android:fitsSystemWindows="false"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:text="@string/first_name_acct"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/firstNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_marginBottom="@dimen/spaceBetweenItems"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="Payton" />

            <TextView
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:text="@string/last_name_acct"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/lastNameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="Elsey" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceBetweenItems"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:text="@string/email_acct"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emailUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:paddingEnd="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:text="paytonelsey@u.boisestate.edu" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/okayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="@dimen/spaceBetweenItems"
                android:layout_marginBottom="@dimen/spaceBetweenItems"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/check" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>