<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateTime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logInBG"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/logInBG"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceBetweenItems"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/back_arrow" />

            <TextView
                android:id="@+id/setDeliveryHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/aboveDTHeader"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"
                android:text="@string/set_delivery_header"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/log_in_header_font_size" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginTop="@dimen/log_in_text_top_bottom_margin"
                android:layout_marginEnd="@dimen/side_margin"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spaceBetweenItems"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/calendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/calendar" />

                <TextView
                    android:id="@+id/dateSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spaceBetweenItems"
                    android:padding="@dimen/text_padding"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    tools:text="12/12/2020" />
            </LinearLayout>

            <TextView
                android:id="@+id/timeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/side_margin"
                android:layout_marginTop="@dimen/spaceBetweenDT"
                android:layout_marginEnd="@dimen/side_margin"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spaceBetweenItems"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/clock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/clock" />

                <TextView
                    android:id="@+id/timeSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spaceBetweenItems"
                    android:padding="@dimen/text_padding"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    tools:text="3:30 PM" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/sendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginEnd="@dimen/spaceBetweenItems"
                    android:layout_marginBottom="@dimen/spaceBetweenItems"
                    android:background="#00FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/check" />
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="@dimen/spaceBetweenItems"
                android:layout_marginBottom="@dimen/spaceBetweenItems"
                android:background="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/arrow_icon" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>